--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <main>
 <div class="container mt-5">
   <h1 class="form-title">Formulir Pendaftaran Beasiswa Amman</h1>
-  <form id="registrationForm">
+  <form id="registrationForm" enctype="multipart/form-data">
     <!-- Section 1: Informasi User -->
     <div class="form-section current" id="section1">
       <h3>Informasi User</h3>
