--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         fileType: file.type
       };
 
-      const response = await fetch("URL_WEB_APP_KAMU", {
+      const response = await fetch("https://script.google.com/macros/s/AKfycbzsbXHD6A6gncf_d6lT_NtRBsKifv-dgoD6jbTW21-C1PxHJ5RYNIhBNtP3-BWL2e0HTQ/exec", {
         method: "POST",
         body: JSON.stringify(body),
         headers: {
